[package]
name = "xxnetwork-cli"
version = "0.2.6"
authors = ["xxlabs <admin@xx.network>"]
description = "Substrate based, xxnetwork blockchain node implementation in Rust."
build = "build.rs"
edition = "2021"
default-run = "xxnetwork-chain"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"
publish = false

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "xxnetwork-chain"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
clap = { version = "4.0.9", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.136", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.21"
hex-literal = "0.3.4"
log = "0.4.17"
rand = "0.8"

# primitives
sp-authority-discovery = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
grandpa-primitives = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", package = "sp-consensus-grandpa" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-inherents = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-keyring = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-transaction-storage-proof = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-offchain = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-session = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

# client dependencies
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-chain-spec = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-transaction-pool-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-network = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-network-common = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-slots = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
grandpa = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", package = "sc-consensus-grandpa" }
sc-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-basic-authorship = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sc-telemetry = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-authority-discovery = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-sync-state-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-sysinfo = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

# frame dependencies
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
frame-system-rpc-runtime-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
pallet-transaction-payment = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
pallet-im-online = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }

# node-specific dependencies
xxnetwork-runtime = { version = "0.2.6", path = "../runtime/xxnetwork", optional = true }
canary-runtime = { version = "0.2.0", path = "../runtime/canary", optional = true }
node-rpc = { version = "0.2.0", path = "../rpc" }
node-primitives = { version = "0.2.0", path = "../primitives" }
node-executor = { version = "0.2.0", path = "../executor" }
runtime-common = { version = "0.2.0", path = "../runtime/common" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
frame-benchmarking-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
node-inspect = { version = "0.2.0", optional = true, path = "../inspect" }
try-runtime-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
serde_json = "1.0.85"

[dev-dependencies]
sc-keystore = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-client-db = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-epochs = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-service-test = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = "0.23"
serde_json = "1.0"
regex = "1.6.0"
platforms = "2.0"
soketto = "0.7.1"
criterion = { version = "0.3.5", features = ["async_tokio"] }
tokio = { version = "1.22.0", features = ["macros", "time", "parking_lot"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
wait-timeout = "0.2"
substrate-rpc-client = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

[build-dependencies]
clap = { version = "4.0.9", optional = true }
clap_complete = { version = "4.0.2", optional = true }
node-inspect = { version = "0.2.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
substrate-build-script-utils = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
substrate-frame-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
try-runtime-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", optional = true }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

[features]
default = ["cli", "xxnetwork"]
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"xxnetwork-runtime/runtime-benchmarks",
	"canary-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"xxnetwork-runtime/try-runtime",
	"canary-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]

xxnetwork = ["xxnetwork-runtime", "node-executor/xxnetwork"]
canary = ["canary-runtime", "node-executor/canary"]

fast-runtime = [
	"xxnetwork-runtime/fast-runtime",
	"canary-runtime/fast-runtime",
]
