[package]
name = "node-executor"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
node-primitives = { version = "0.2.0", path = "../primitives" }
runtime-common = { version = "0.2.0", path = "../runtime/common" }
xxnetwork-runtime = { version = "0.2.3", path = "../runtime/xxnetwork", optional=true }
canary-runtime = { version = "0.2.0", path = "../runtime/canary", optional=true }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-state-machine = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-trie = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
node-testing = { version = "0.2.0", path = "../testing" }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-im-online = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-treasury = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-application-crypto = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-externalities = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
wat = "1.0"
futures = "0.3.21"

[features]
default = ["xxnetwork"]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []
xxnetwork = ["xxnetwork-runtime"]
canary = ["canary-runtime"]

[[bench]]
name = "bench"
harness = false
