[package]
name = "node-inspect"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
thiserror = "1.0"
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
