[package]
name = "node-inspect"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
thiserror = "1.0"
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
