[package]
name = "migrations"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", default-features = false  }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-vesting = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-vesting/std",
]
try-runtime = ["frame-support/try-runtime"]
