[package]
name = "node-primitives"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2018"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-application-crypto = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
