[package]
name = "node-rpc"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
node-primitives = { version = "0.2.0", path = "../primitives" }
pallet-transaction-payment-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-babe-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-epochs = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-chain-spec = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-finality-grandpa = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-finality-grandpa-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-sync-state-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-transaction-pool-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
substrate-frame-rpc-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
