[package]
name = "node-rpc"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
node-primitives = { version = "0.2.0", path = "../primitives" }
pallet-transaction-payment-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-babe-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-epochs = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-chain-spec = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-grandpa = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-consensus-grandpa-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-rpc-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-sync-state-rpc = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
sc-transaction-pool-api = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
substrate-frame-rpc-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }
