[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2018"
homepage = "https://xx.network"
repository = "https://gitlab.com/xxnetwork/xx-substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-io ={ git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
pallet-session = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", features = ["historical"], default-features = false }
pallet-authorship = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-application-crypto = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-election-provider-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
log = { version = "0.4.14", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false, optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-storage = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-staking-reward-curve = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
substrate-test-utils = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
frame-election-provider-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", features = ["runtime-benchmarks"] }
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
