[package]
name = "swap"
version = "0.1.0"
authors = ["xx network <admin@xx.network>"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }
frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false, optional = true }

chainbridge = { path = "../chainbridge" , default-features = false}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6", default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"chainbridge/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "chainbridge/runtime-benchmarks"]
try-runtime = [ "frame-support/try-runtime" ]
