[package]
name = "node-testing"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", features = ["test-helpers", "rocksdb"] }
sc-client-db = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", features = ["rocksdb"] }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-keyring = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
node-executor = { version = "0.2.0", path = "../executor" }
node-primitives = { version = "0.2.0", path = "../primitives" }
runtime-common = { version = "0.2.0", path = "../runtime/common" }
xxnetwork-runtime = { version = "0.2.6", path = "../runtime/xxnetwork" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
substrate-test-client = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-transaction-payment = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-inherents = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
log = "0.4.17"
tempfile = "3.1.0"
fs_extra = "1.3.0"
futures = "0.3.21"
claims = { path = "../claims" }
