[package]
name = "xx-betanet-rewards"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# pallets
claims = { default-features = false, path = "../claims" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"claims/std",
]
