[package]
name = "xx-betanet-rewards"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

# pallets
claims = { default-features = false, path = "../claims" }

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false, optional = true }

[dev-dependencies]
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-vesting = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
libsecp256k1 = { version = "0.6", features = ["hmac"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"claims/std",
]
runtime-benchmarks = ["frame-benchmarking"]
